[package]
name = "shot"
version = "0.1.1"
edition = "2021"
authors = ["George Miao <gm@miao.dev>"]
license = "MIT"
description =  "Simple CLI that upload images to Cloudflare Image, either from clipboard, or local file."
repository = "https://github.com/George-Miao/shot"
categories = ["command-line-utilities"]
keywords = ["cli", "cloudflare", "image"]

[dependencies]
color-eyre      = { version = "0.5.11", default-features = false }
attohttpc       = { version = "0.18.0", features = ["multipart-form", "json"] }
clap            = { version = "3.0.0-rc.5", features = ["derive", "cargo"] }
serde           = { version = "1.0.132", features = ["derive"] }
log             = { version = "0.4.14", features = ["std"] }
url             = { version = "2.2.2", features = ["serde"] }
image           = { version = "0.23.14" }
humantime-serde = "1.0.1"
humantime       = "2.1.0"
serde_json      = "1.0.73"
env_logger      = "0.9.0"
bytesize        = "1.1.0"
arboard         = "2.0.1"
mod_use         = "0.2.0"
indoc           = "1.0.3"
mime            = "0.3.16"
home            = "0.5.3"
ron             = "0.7.0"

# Workaround for debug performence panualty by color-eyre
[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
opt-level = 'z'
codegen-units = 1
panic = 'unwind'
