[package]
name        = "shot"
version     = "0.1.2"
edition     = "2021"
authors     = ["George Miao <gm@miao.dev>"]
license     = "MIT"
description = "Simple CLI that upload images to Cloudflare Image, either from clipboard, or local file."
repository  = "https://github.com/George-Miao/shot"
categories  = ["command-line-utilities"]
keywords    = ["cli", "cloudflare", "image"]

[dependencies]
color-eyre      = { version = "0.6.2", default-features = false }
attohttpc       = { version = "0.24.0", features = ["multipart-form", "json"] }
clap            = { version = "4.0.32", features = ["derive", "cargo", "color"] }
serde           = { version = "1.0.152", features = ["derive"] }
log             = { version = "0.4.17", features = ["std"] }
url             = { version = "2.3.1", features = ["serde"] }
image           = "0.24.5"
humantime-serde = "1.1.1"
humantime       = "2.1.0"
serde_json      = "1.0.91"
env_logger      = "0.10.0"
bytesize        = "1.1.0"
arboard         = "3.2.0"
mod_use         = "0.2.1"
mime            = "0.3.16"
home            = "0.5.4"
ron             = "0.8.0"
tap             = "1.0.1"

[profile.release]
strip         = true
opt-level     = 'z'
codegen-units = 1
panic         = 'unwind'
